<resources>
    <string name="app_name">Quidee Store</string>
    <string name="sign_in">Sign in</string>
    <string name="verification_code">Verification code</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="create_account">Create account</string>
    <string name="subtitle_login">Come in and enjoy the world in the palm of your hand.</string>
    <string name="subtitle_verification_code">We have to sent the code verification to</string>
    <string name="email_example">email@email.com</string>
    <string name="number_example">+55 11 91111–2222</string>
    <string name="subtitle_create_account">Create an account and enjoy the world in the palm of your hand</string>
    <string name="hint_email">Enter your email or phone number</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_card_name">Enter card name</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_confirm_password">Enter your password again</string>
    <string name="hint_last_name">Enter your last name</string>
    <string name="hint_card_number">Enter card number</string>
    <string name="hint_phone_number">Enter your phone number</string>
    <string name="hint_email_create_account">Enter your email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_email">Confirm email</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_account">Dont have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="didnt_receive_code">Didn\'t receive the code?</string>
    <string name="email_or_phone_number">Email or phone number</string>
    <string name="name">Name</string>
    <string name="resend">Resend</string>
    <string name="sign_up">Sign up</string>
    <string name="language">Language</string>
    <string name="brazilian_portuguese">Brazilian Portuguese</string>
    <string name="change_password">Change password</string>
    <string name="previous_password">Previous password</string>
    <string name="enter_your_previous_password">Enter your previous password</string>
    <string name="new_password">New password</string>
    <string name="hint_enter_new_password">Enter new password</string>
    <string name="hint_enter_new_email">Enter new email</string>
    <string name="hint_enter_new_phone_number">Enter new phone number</string>
    <string name="hint_confirm_your_new_password">Confirm your new password</string>
    <string name="hint_confirm_your_new_email">Confirm your new email</string>
    <string name="hint_confirm_your_new_phone_number">Confirm your new phone number</string>
    <string name="change_email">Change email</string>
    <string name="previous_email">Previous email</string>
    <string name="enter_your_previous_email">Enter your previous email</string>
    <string name="new_email">New email</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="previous_phone_number">Previous phone number</string>
    <string name="enter_your_previous_phone_number">Enter your previous phone number</string>
    <string name="new_phone_number">New phone number</string>
    <string name="confirm_phone_number">Confirm phone number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save changes</string>
    <string name="settings">Settings</string>
    <string name="preferencess">Preferencess</string>
    <string name="legal_and_policies">Legal and policies</string>
    <string name="help_and_support">Help and support</string>
    <string name="general">General</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_orders">My orders</string>
    <string name="coupon">Coupon</string>
    <string name="customer_service">Customer Service</string>
    <string name="user_name">USER NAME</string>
    <string name="order_placed">Order Placed</string>
    <string name="price">Price</string>
    <string name="order_code">Q12345</string>
    <string name="place_order_time">Place order time:</string>
    <string name="delivery_estimate">Delivery estimate:</string>
    <string name="help">Help</string>
    <string name="order_confirmed">Order confirmed</string>
    <string name="the_store_confirmed_your_order">The store confirmed your order</string>
    <string name="track_order">Track order</string>
    <string name="search">Search</string>
    <string name="store_name">Store Name</string>
    <string name="_4_9_chocolates">4.9 - Chocolates</string>
    <string name="_60_80_min_r_5_99">60-80 min - R$ 5,99</string>
    <string name="notification">Notification</string>
    <string name="empty">Empty</string>
    <string name="add_card">Add card</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="checkout">Checkout</string>
    <string name="delivery_address">Delivery address</string>
    <string name="pay_now">Pay Now</string>
    <string name="payment_successful">Payment Successful!</string>
    <string name="your_payment_was_successful_thank_you_for_your_order">Your payment was successful. Thank you for your order.</string>
    <string name="view_order">View Order</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="an_error_occurred">An error occurred but we are already working to resolve it. Please, try again.</string>
    <string name="go_back">Go back</string>
    <string name="example"><![CDATA[Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. ]]></string>
    <string name="add">Add</string>
    <string name="cart">Cart</string>
    <string name="good_morning_user">Good morning, User</string>
    <string name="quidee_chocolate_shop">Quidee: Chocolate shop, delivery service. One store, two options, endless possibilities.</string>
    <string name="all_in_one_app">All in one app!</string>

</resources>