<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CreateAccountActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/sign_in"
                    android:layout_width="264dp"
                    android:layout_height="47dp"
                    android:layout_marginTop="80dp"
                    android:text="@string/create_account"
                    android:textSize="32sp"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/subtitle_create_account"
                    android:layout_width="282dp"
                    android:layout_height="36dp"
                    android:textAlignment="center"
                    android:text="@string/subtitle_login"
                    android:textColor="#6A6A6A" />

            </LinearLayout>



            <TextView
                android:id="@+id/edit_text_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/name"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/edittext_rounded_corners"
                android:hint="@string/hint_name"
                android:autofillHints="name"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/text_view_last_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/last_name"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editText_last_name"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/edittext_rounded_corners"
                android:hint="@string/hint_last_name"
                android:autofillHints="name"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/text_view_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/email"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/edittext_rounded_corners"
                android:hint="@string/hint_email_create_account"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/text_view_phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/phone_number"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/edittext_rounded_corners"
                android:hint="@string/hint_phone_number"
                android:autofillHints="phone"
                android:inputType="phone"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/text_view_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editText_password_create_account"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/hint_password"
                android:autofillHints="password"
                android:paddingStart="20dp"
                android:textSize="15sp"
                android:inputType="textPassword"
                android:paddingEnd="10dp"
                android:background="@drawable/edittext_rounded_corners" />

            <TextView
                android:id="@+id/text_view_password_title_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/hint_confirm_password"
                android:autofillHints="password"
                android:paddingStart="20dp"
                android:textSize="15sp"
                android:inputType="textPassword"
                android:paddingEnd="10dp"
                android:background="@drawable/edittext_rounded_corners" />



            <Button
                android:id="@+id/next_create_account"
                android:layout_width="360dp"
                android:layout_height="57dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:background="@drawable/button_drawable"
                android:text="@string/next"
                android:textSize="20sp"
                app:backgroundTint="@null" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_dont_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_account"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_view_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in"
                        android:textColor="@color/primary"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="50dp"
                        android:layout_height="1dp"
                        android:background="@color/primary" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>