<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeEmailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">

            <ImageButton
                android:id="@+id/toolbar_back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@color/white"
                android:importantForAccessibility="no"
                android:src="@drawable/baseline_arrow_back_ios_new_24"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/change_email"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:orientation="vertical"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/text_view_previous_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_email"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/editText_previous_email"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/enter_your_previous_email"
            android:autofillHints="password"
            android:paddingStart="20dp"
            android:textSize="15sp"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:background="@drawable/edittext_rounded_corners" />

        <TextView
            android:id="@+id/text_view_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_email"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"/>



        <EditText
            android:id="@+id/editText_new_email"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/hint_enter_new_email"
            android:autofillHints="password"
            android:paddingStart="20dp"
            android:textSize="15sp"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:background="@drawable/edittext_rounded_corners" />

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_email"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/text_view_confirm_email"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/hint_confirm_your_new_email"
            android:autofillHints="password"
            android:paddingStart="20dp"
            android:textSize="15sp"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:background="@drawable/edittext_rounded_corners" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_next_email"
        android:layout_width="360dp"
        android:layout_height="57dp"
        android:background="@drawable/button_drawable"
        android:text="@string/next"
        android:textSize="20sp"
        app:backgroundTint="@null"
        android:layout_gravity="bottom|center"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="60dp"
        tools:ignore="VisualLintButtonSize" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>