<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/storeImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_store"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="8dp">

        <TextView
            android:id="@+id/storeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/storeRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_9_chocolates"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/storeDeliveryTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_60_80_min_r_5_99"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
